# wisely-optimize-data-engineer-takehome

./: .dockerignore  Dockerfile  INSTRUCTIONS.md  README.md  REPLY.md  SIMPLE-WALKTHROUGH.md  WALKTHROUGH.md  WRITEUP.md  docker-compose.yml  implementation-plan.md  interview-prep-cheatsheet.md  interview-prep.md  manage.py  pyproject.toml  research.md  schema.sql
data/live/: snapshot_00.json  snapshot_01.json  snapshot_02.json  snapshot_03.json  snapshot_04.json
data/realgm/: players.csv  realgm_profile_26515.html  realgm_profile_94924.html
data/wisely_api/: 104461.json  108403.json  155356.json  1660.json  26515.json  28767.json  3718.json  42253.json  58609.json  5991.json  87934.json  94924.json  9600.json
src/bball/: __init__.py  cli.py  db.py  load.py  models.py  normalize.py  report.py  resolve.py  stats.py
src/bball/adapters/: base.py  live.py  realgm.py  wisely_api.py
src/bball_web/: settings.py  urls.py  views.py
tests/: conftest.py  test_adapters.py  test_live.py  test_normalize.py  test_pipeline.py  test_resolve.py  test_ts.py  test_web.py
