[project]
name = "wisely-optimize-data-engineer-takehome"
version = "0.1.0"
description = "Wisely basketball data engineer take-home: multi-source ingestion into normalized Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2",
]

[project.scripts]
bball = "bball.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bball"]
